header + preview сайта без адаптива

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 
 *{
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 *:before,
 *:after{
@@ -32,7 +34,8 @@ body{
 
 .header{
 	background-color: #413A35;
-	height: 15vh;
+	/*height: 15vh;*/
+	padding: 50px 0;
 	padding-top: 5px;
 	position: relative;
 }
@@ -64,7 +67,7 @@ body{
 	
 	color: #fff;
 	font-weight: 500;
-	font-size: 13px;
+	font-size: 15px;
 	line-height: 15px;
 
 	position: relative;
@@ -84,6 +87,7 @@ body{
 .header__info span:last-child{
 
 	font-size: 27px;
+	margin-right: 40px;
 }
 .header__info span:last-child i{
 	font-size: 25px;
@@ -95,32 +99,36 @@ body{
 .header__nav{
 	background-color: #FFC501;
 	width: 90%;
+	/*height: 90%;*/
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 20px;
+	
 
 	position: absolute;
 	z-index: 2;
-	bottom: -60%;
+	bottom: -80%;
 	left: 50%;
 	transform: translate3d(-50%, -50%, 0);
 }
 .header__nav ul{
+	margin: 20px 0px 20px 40px;
 	display: flex;
-	flex-basis: 70%;
+	flex-basis: 50%;
+
 }
 .header__nav li{
 	list-style-type: none;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 400;
 	color: #312C21;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	padding: 0 3% 0 3%;
 	border-right: 1px solid #312C21;
 }
 .header__nav li:first-child{
-	padding-left: 0;
+	padding-left: 3%;
 }
 .header__nav li:last-child{
 	padding-right: 0;
@@ -133,7 +141,8 @@ body{
 
 .header__nav--callback{
 	border: 1px solid #312C21;
-	padding: 20px 30px;
+	padding: 15px 30px;
+	margin: 20px 40px 20px 0;
 }
 .header__nav--callback i{
 	font-size: 20px;
@@ -142,13 +151,52 @@ body{
 .header__nav--callback a{
 	color: #312C21;
 	text-decoration: none;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 /* PREVIEW */
 
 .preview{
-	width: 100%;
+
+	height: 80vh;	
 	background: url(../img/bg.png) center no-repeat;
 	background-size: cover;	
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.slider{
+	width: 60%;
+	height: auto;
+	padding: 50px 50px;
+	/*background-color: #333;*/
+	background: rgba(51, 51, 51, 0.54);
+	color: #fff;
+	font-family: 'Oswald';
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+}
+.slider-title{
+	font-weight: 500;
+	font-size: 52px;
+	line-height: 77px;
+	margin-bottom: 10px;
+}
+.slider-subtitle{
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 44px;
+}
+.slider-btn{
+	display: inline-block;
+	color: #312C21;
+	background-color: #FFC501;
+	font-family: 'Roboto';
+	font-weight: 600;
+	text-decoration: none;
+	padding: 20px 60px;
+	margin-top: 20px;
 }
