--- a/assets/css/adaptive/1100.css
+++ b/assets/css/adaptive/1100.css
@@ -1,4 +1,4 @@
-@media(max-width: 1200px){
+@media(max-width: 1100px){
 	/*HEADER*/
 
 	.logo img{
@@ -31,6 +31,16 @@
 		}
 	.slider-btn{
 		padding: 15px 40px;
+		font-size: 18px;
 	}
 
+	/*ABOUT*/
+	.about__item{
+
+	}
+
+	/*PALLET*/
+	.pallet{
+		justify-content: space-between;
+	}
 }
