--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,3 +150,151 @@ body{
 	padding: 20px 60px;
 	margin-top: 20px;
 }
+
+/*SECTION*/
+.section{
+	margin: 150px 0 0 0; 
+	
+}
+.section__title{
+	margin-bottom: 50px;
+}
+
+/*ABOUS US*/
+.about{
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	
+}
+.about__item{
+	width: 273px;
+	height: 293px;
+	position: relative;
+}
+.about__item:before{
+	content: "";
+	display: block;
+	width: 90%;
+	height: 2px;
+	position: absolute;
+	top: 65%;
+	right: 20px;
+	z-index: 3;
+	background-color: #FFC501;
+	
+}
+.about__text{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 2;
+	color: #fff;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 10% 0 10% 3%;
+}
+.about-title{
+	font-family: 'Oswald';
+	font-weight: 500;
+	font-size: 32px;
+	text-transform: uppercase;
+}
+.about-title span{
+	color: #FFC501;
+}
+.about-description{
+	font-family: 'Raleway';
+	font-weight: 400;
+	font-size: 18px;
+/*	position: absolute;
+	z-index: 4;
+	bottom: 0;*/
+	height: 25%;
+	width: 95%;
+	margin: 0 auto;
+	
+}
+.about__img{
+	width: 100%;
+	height: auto;
+	position: relative;
+}
+.about__img-opacity{
+	background-color: #181818;
+	position: absolute;
+	z-index: 1;
+	opacity: .7;
+	width: 100%;
+	height: 98.7%;
+}
+.about__img img{
+	width: 100%;
+	height: auto;
+}
+
+
+/*PALLET*/
+
+.pallet{
+	margin-top: 50px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+.pallet__item{
+	margin-top: 50px;
+	width: 390px;
+	height: 500px;
+	/*background: #8DA399;*/
+}
+.pallet__item:nth-child(4), .pallet__item:nth-child(5), .pallet__item:nth-child(6){
+	/*margin-top: 50px;*/
+}
+.pallet-img{
+
+	border-bottom: 1px solid #181818;
+	text-align: center;
+}
+.pallet-img img{
+	width: 90%;
+	height: auto;
+}
+.pallet-title, .pallet-width{
+	font-family: 'Roboto';
+	font-weight: 500;
+	font-size: 24px;
+}
+.pallet-title{
+	margin-top: 20px;
+}
+.pallet-width{
+
+}
+.pallet-description{
+	margin-top: 20px;
+	font-family: 'Raleway';
+	font-weight: 400;
+	font-size: 18px;
+
+}
+.pallet-cost{
+	margin-top: 20px;
+}
+.pallet-cost span{
+	font-family: 'Raleway';
+	font-weight: 700;
+	font-size: 24px;
+	margin-right: 5px;
+}
+
+.pallet-cost-btn{
+	text-decoration: none;
+	color: inherit;
+	background-color: #FFC501;
+	padding: 10px 20px;
+	border-radius: 20px;
+
+}
