--- a/assets/css/adaptive/540.css
+++ b/assets/css/adaptive/540.css
@@ -26,6 +26,11 @@
 		font-size: 25px;
 	}
 
+	/*PRODUCTION*/
+	.production-btn a {
+		width: 60%;
+	}
+
 	/*PALLET*/
 	.pallet{
 		justify-content: normal;
