--- a/assets/css/adaptive/700.css
+++ b/assets/css/adaptive/700.css
@@ -13,6 +13,18 @@
 		margin: 50px auto 0 auto;
 	}
 
+	/*PRODUCTION*/
+	.production__text{
+		font-size: 17px;
+	}
+
+	.production-btn{
+		font-size: 18px;
+	}
+	.production-btn span{
+		font-size: 16px;
+	}
+
 	/* PALLET} */
 	.pallet__item{
 		margin-top: 50px;
