--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body{
 }
 /* HEADER */
 .header{
+	height: 12vh;
 	padding: 25px 0 10px 0;
 	box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
 	position: relative;
@@ -98,7 +99,7 @@ body{
 
 /* preview  */
 .preview{
-	height: 80vh;
+	height: 88vh;
 	background: url(../img/header-bg.jpg) center no-repeat;
 	background-size: cover;
 
@@ -157,6 +158,7 @@ body{
 	
 }
 .section__title{
+	font-size: 28px;
 	margin-bottom: 50px;
 }
 
@@ -235,7 +237,55 @@ body{
 	height: auto;
 }
 
+/*PRODUCTION*/
+.production{
+	display: flex;
+	justify-content: space-betweena;
 
+
+}
+.production__item{
+	
+	flex-basis: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-around;
+}
+
+.production__item:last-child{
+	align-items: center;
+}
+.production__img{
+	width: 80%;
+	height: auto;
+}
+
+.production__text{
+	font-family: 'Raleway';
+	font-size: 24px;
+	line-height: 28px;
+}
+
+.production-btn{
+	margin-top: 50px;
+}
+.production-btn a{
+	background-color:#FFC501;
+	color: inherit;
+	font-family: 'Raleway';
+	font-weight: 700;
+	font-size: 20px;
+	text-decoration: none;
+	padding: 20px 60px;
+	border-radius: 20px;
+	display: inline-block;
+}
+.production-btn span{
+	display: inline-block;
+	margin-left: 20px;
+	color: #828282;
+}
 /*PALLET*/
 
 .pallet{
