--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,3 +348,95 @@ body{
 	border-radius: 20px;
 
 }
+
+
+/*FORM*/
+
+.section--form .container{
+	display: flex;
+}
+
+
+.form__item{
+	
+
+}
+.form__item:first-child{
+	flex-basis: 50%;
+}
+.form__item:last-child{
+	flex-basis: 50%;
+	display: flex;
+	align-items: center;
+	
+}
+
+.form__item:last-child img{
+	display: block;
+	width: 100%;
+	height: auto;
+}	
+
+.form__input-description{
+	font-family: 'Raleway';
+	font-weight: 400;
+	font-size: 22px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+}
+
+.form__input{
+	width: 100%;
+	height: 60px;
+}
+
+.form__text{
+	width: 100%;
+	height: 120px;
+}
+.form__input, .form__text{
+	background: #FFFFFF;
+	border: 1px solid #181818;
+	border-radius: 5px;
+	padding: 20px;
+	font-size: 20px;
+}
+.form__input{
+	text-align: center;
+}
+.checkbox__wrapper{
+	margin: 10px 0;
+	display: flex;
+	align-items: center;
+}
+.form__checkbox{
+	width: 20px;
+	height: 20px;
+
+}
+.form__label{
+	font-family: 'Raleway';
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	margin-left: 10px;
+}
+.form__btn{
+	display: block;
+	width: 50%;
+	margin: 0 auto;
+	margin-top: 10px;
+	background-color: #FFC501;
+    color: inherit;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 20px;
+    text-decoration: none;
+    padding: 20px 60px;
+    border-radius: 20px;
+    border: none;
+    box-shadow: none;
+    outline: none; 
+    cursor: pointer;
+}
