--- a/assets/css/adaptive/1100.css
+++ b/assets/css/adaptive/1100.css
@@ -56,4 +56,18 @@
 	.pallet{
 		justify-content: space-between;
 	}
+
+		/*FOOTER*/
+		.footer-logo{
+			width: 70%;
+	}
+		.footer__nav ul li{
+			font-size: 14px;
+		}
+		.footer__info li{
+			font-size: 12px;
+		}
+		.footer__feedback-text{
+			font-size: 12px;
+		}
 }
