--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
 /* Roboto + Oswald + Raleway + Montserrat*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&family=Oswald:wght@400;500;600&family=Raleway:wght@100;400;500;700&family=Roboto:wght@100;300;400;500&display=swap');
 
+html{
+
+}
 *{
 	box-sizing: border-box;
 	margin: 0;
@@ -349,6 +352,22 @@ body{
 
 }
 
+.pallet-btn{
+	margin-top: 50px;
+	flex-basis: 100%;
+	text-align: center;
+}
+.pallet-btn a{
+	font-size: 24px;
+	text-decoration: none;
+	color: inherit;
+	background-color: #FFC501;
+	padding: 10px 0px;
+	border-radius: 20px;
+	display: inline-block;
+	width: 20%;
+
+}
 
 /*FORM*/
 
@@ -403,7 +422,7 @@ body{
 	font-size: 20px;
 }
 .form__input{
-	text-align: center;
+	text-align: center; 
 }
 .checkbox__wrapper{
 	margin: 10px 0;
@@ -439,4 +458,105 @@ body{
     box-shadow: none;
     outline: none; 
     cursor: pointer;
+}
+
+/*FOOTER*/
+.footer{
+	margin-top: 100px;
+	background-color: #413A35;
+	color: #fff;
+	
+}
+.footer .container{
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	/*align-items: center;*/
+	padding-top: 50px;
+}
+
+.footer__item{
+
+}
+
+.footer-copyright{
+	font-size: 14px;
+	margin-top: 40px;
+}
+
+.footer__nav ul li{
+	font-family: 'Roboto';
+	font-weight: 400;
+	font-size: 16px;
+	padding-left: 30px;
+	list-style-type: none;
+	padding: 0;
+	margin-bottom: 20px;
+}
+.footer__nav ul li:first-child{
+	
+}
+.footer__nav a{
+	text-decoration: none;
+	color: inherit;
+}
+
+.footer__info{
+	font-size: 13px;
+	text-transform: uppercase;
+	font-family: 'Roboto';
+	font-weight: 400;
+}
+.footer__info i{
+	margin-right: 20px;
+	font-size: 16px;
+	color: #FFC501;
+}
+.footer__info li{
+	list-style-type: none;
+	margin-bottom: 40px;
+}
+.footer__feedback{
+	text-align: center;
+}
+.footer__feedback-text{
+	font-family: 'Roboto';
+	font-weight: 500;
+	font-size: 14px;
+}
+
+.footer__feedback-btn{
+	display: inline-block;
+	color: #FFC501;
+	font-size: 20px;
+	padding: 15px 30px;
+	border: 1px solid #ffC501;
+	border-radius: 10px;
+	margin: 20px 0;
+}
+
+.footer__feedback-btn i{
+	font-size: 20px;
+	margin-right: 5px;
+}
+.footer__feedback-btn a{
+	color: inherit;
+	text-decoration: none;
+}
+
+.footer__number i{
+	margin-right: 10px;
+}
+.footer__number{
+	font-size: 22px;
+}
+
+.footer-police{
+	text-align: center;
+	font-size: 12px;
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 10px;
+	padding: 20px 0;
+	border-top: 1px solid #FFC501;
 }
